# dwc-dp-validate

./: .gitignore  .gitmodules  .pylintrc  AGENTS.md  CLAUDE.md  README.md  pyproject.toml
src/dwc_dp_validate/: cli.py  report.py  validator.py
src/dwc_dp_validate/checks/: _utils.py  integrity.py  profile.py  schema.py  semantic.py
src/dwcdp_validate/: cli.py  report.py  validator.py
src/dwcdp_validate/checks/: semantic.py
tests/: helpers.py  test_integrity.py  test_profile.py  test_schema.py  test_semantic.py  test_validator.py
tests/fixtures/invalid_bad_values/: datapackage.json  occurrence.csv
tests/fixtures/invalid_missing_profile/: datapackage.json  occurrence.csv
tests/fixtures/overlap_violations/: datapackage.json  event.csv  occurrence.csv
tests/fixtures/undeclared_required/: datapackage.json  occurrence.csv
